package com.mrathena.design.pattern.creational.patterns.abstract_.factory.pattern.implement;

/**
 * @author mrathena on 2020/1/8 14:17
 */
public class ConcreteProductA1 extends AbstractProduct1 {
}
