@startuml

abstract class AbstractProductA
abstract class AbstractProductB
class ConcreteProductA1 extends AbstractProductA
class ConcreteProductA2 extends AbstractProductA
class ConcreteProductB1 extends AbstractProductB
class ConcreteProductB2 extends AbstractProductB
abstract class AbstractFactory {
    + abstract AbstractProductA getProductA()
    + abstract AbstractProductB getProductB()
}
class ConcreteFactory1 extends AbstractFactory {
    + AbstractProductA getProductA()
    + AbstractProductB getProductB()
}
class ConcreteFactory2 extends AbstractFactory {
    + AbstractProductA getProductA()
    + AbstractProductB getProductB()
}
class FactoryProvider {
    + static AbstractFactory getFactory(String factoryName)
}

FactoryProvider ..> AbstractFactory
AbstractFactory ..> AbstractProductA
AbstractFactory ..> AbstractProductB
ConcreteFactory1 ..> AbstractProductA
ConcreteFactory1 ..> AbstractProductB
ConcreteFactory1 ..> ConcreteProductA1
ConcreteFactory1 ..> ConcreteProductB1
ConcreteFactory2 ..> AbstractProductA
ConcreteFactory2 ..> AbstractProductB
ConcreteFactory2 ..> ConcreteProductA2
ConcreteFactory2 ..> ConcreteProductB2

@enduml